--- a/src/components/CardComponents/DigitalMarketing/DigitalMarketing.css
+++ b/src/components/CardComponents/DigitalMarketing/DigitalMarketing.css
@@ -1,63 +1,64 @@
-.DigitalMarketing{
+/* ./////// divovi na template */
+.DigitalMarketintipsHeader {
+    width: 55%;
+    height: 9%;
+    position: absolute;
+    top: 12%;
+    left: 20%;
+}
+.DataSciencetipsPhoto {
+    width: 10%;
+    height: 9%;
+    position: absolute;
+    top: 12%;
+    left: 8%;
+}
+.DataSciencetipsInfos {
     width: 75%;
-    margin-left: 40px;
-    padding-top: 20px;
-}
-.DigitalMarketintipsHeader { 
-    width: 78%;
-    height: 99px;
+    height: 3%;
     position: absolute;
-    top: 110px;
-    left: 157px;
-}
-.DataSciencetipsPhoto{
-    width: 17%;
-    height: 130px;
-    position: absolute;
-    top: 90px;
-    left: 3px;
-}
-.DataSciencetipsInfos{
-    width: 100%; 
-    height: 50px;
-    position:absolute;
-    top: 233px;
-    right:0;
+    top: 22%;
+    right: 20%;
 }
 .DigitalMarketingtipsWorkExpirience {
-    width:38%;
-    height: 61vh;
+    width: 38%;
+    height: 40%;
     position: absolute;
-    top: 40vh;
+    top: 26%;
+}
+.DigitalMarketingtipsEducation {
+    width: 34%;
+    height: 16%;
+    position: absolute;
+    bottom: 15%;
+    left: 5%;
 }
 .DigitalMarketingtipsSKils {
     width: 33%;
-    height: 18vh;
+    height: 10%;
     position: absolute;
-    top: 39vh;
+    top: 26%;
     right: 23%;
 }
 .DigitalMarketingtipsAchievmens {
     width: 32%;
-    height: 14vh;
+    height: 10%;
     position: absolute;
     top: 38%;
     right: 24%;
 }
-
-.DigitalMarketingtipsEducation {
-    width: 34%;
-    height: 23vh;
-    position: absolute;
-    bottom: 21vh;
-    left: 5%;
-}
 .DigitalMarketingtipsLanguages {
     width: 23%;
-    height: 79px;
+    height: 6%;
     position: absolute;
-    top: 74vh;
+    top: 49%;
     right: 33%;
+}
+/* //////////////////////// */
+.DigitalMarketing{
+    width: 75%;
+    margin-left: 40px;
+    padding-top: 20px;
 }
 .DigitalMarketing .dataScienceTitle .shortEngage input[placeholder="Short and engaging pitch about yourself."] {
     width: 100%!important;
