--- a/src/components/CardComponents/WebDevelopment/WebDevelopment.css
+++ b/src/components/CardComponents/WebDevelopment/WebDevelopment.css
@@ -1,47 +1,45 @@
 /* za klikanje divovi styling */
 .WebtipsHeader {
-    width: 209px;
+    width: 35%;
     height: 117px;
     position: absolute;
-    left: 38px;
-    top: 15px;
+    left: 6%;
+    top: 4%;
 }
 .WebtipsPhoto {
-    width: 100px;
+    width: 16%;
     height: 100px;
     position: absolute;
-    top: 16px;
+    top: 4%;
     left: 42%;
 }
-.WebtipsInfos{
-    width: 114px;
+.WebtipsInfos {
+    width: 18%;
     height: 100px;
     position: absolute;
-    right: 20px;
-    top: 17px;
+    top: 4%;
+    right: 4%;
 }
 .WebtipsWorkExpirience {
     width: 55%;
     height: 81%;
     position: absolute;
-    top: 150px;
+    top: 19%;
 }
 .WebtipsSkils {
     width: 38%;
-    height: 163px;
+    height: 20%;
     position: absolute;
-    right: 20px;
-    top: 150px;
+    right: 3%;
+    top: 19%;
 }
-.WebtipsAchivmentsInterests{
+.WebtipsAchivmentsInterests {
     width: 45%;
     height: 54%;
     position: absolute;
-    top: 335px;
+    top: 40%;
     right: -7px;
 }
-
-
 /* //////////////////////////////////////////// */
 
 
@@ -360,7 +358,7 @@ label {
     width:100%;
 }
 /* add remove buttons */
-.btnAdd, .btnRemove,.editAdd {
+.btnAdd, .btnRemove,.editAdd, .btn-close {
     border-radius: 4px;
     color: white;
     background-color: #2dbbad;
@@ -370,7 +368,7 @@ label {
     position: absolute;
     
 }
-.btnAdd:hover, .btnRemove:hover .editAdd:hover {
+.btnAdd:hover, .btnRemove:hover .editAdd:hover .btn-close:hover{
     color: white;
     background-color: #2dbbad;
 }
@@ -432,5 +430,9 @@ label {
     padding: 20px 0 0 20px;
 }
 .forma-style .popup{
+    display: none;
     margin-bottom: 15px;
+}
+.forma-style:hover .popup{
+    display: block;
 }
